# simworld

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  gfx.rs  main.rs  ui.rs
app/src/app/: controls.rs  directories.rs  persistence.rs
app/src/app/persistence/: window.rs
app/src/gfx/: egui.rs  game.rs  performance.rs  wgpu.rs
app/src/ui/: controls.rs
assets/game/terrain/: terrain.aseprite
assets/palette/: palette.aseprite
core/: Cargo.toml
core/src/: error.rs  game.rs  lib.rs  map.rs  math.rs  pop.rs  renderer.rs  sim.rs  visuals.rs  world.rs
core/src/game/: events.rs  map.rs  pop.rs  world.rs
core/src/map/: terrain.rs
core/src/math/: ema.rs  point.rs  rect.rs  size.rs
core/src/renderer/: atlas.rs  camera.rs  palette.rs  sprite.rs
core/src/renderer/shaders/: sprite.wgsl
core/src/sim/: config.rs  context.rs  performance.rs  state.rs  timer.rs
core/src/visuals/: color.rs  palette.rs  sprite.rs  sprite_atlas.rs  sprite_sheet.rs  state.rs
core/src/visuals/sprite_sheet/: terrain.rs
core/src/world/: events.rs  map.rs  pop.rs  view.rs
core/src/world/map/: terrain.rs
core/src/world/pop/: events.rs
