[package]
name = "simworld-app"
version = "0.1.0"
edition = "2024"

[dependencies]
simworld-core = { workspace = true, features = ["renderer", "sim"] }
anyhow = "1.0.102"
directories = "6.0.0"
egui = { version = "0.34.1", features = ["persistence"] }
egui-phosphor = "0.12.0"
egui-wgpu = "0.34.1"
egui-winit = "0.34.1"
pollster = "0.4.0"
ron = { workspace = true }
serde = { workspace = true }
wgpu-profiler = "0.27.0"