[package]
name = "simworld-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
renderer = ["bytemuck", "wgpu"]
sim = ["triple_buffer"]

[dependencies]
bytemuck = { version = "1.25.0", optional = true }
glam = "0.32.1"
grid = "1.0.0"
slotmap = "1.1.1"
triple_buffer = { version = "9.0.0", optional = true }
wgpu = { version = "29.0.1", optional = true }